@@ -23,6 +23,8 @@
  along with this program; if not, write to the Free Software
  Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
 
+ (klocale->translate stuff added by didier Belot <dib@avo.fr>)
+
  */
 
 
@@ -45,7 +47,7 @@ ConfigDlg::ConfigDlg(QWidget *parent=0, const char *name=0,
 
   label1 = new QLabel(this);
   label1->setGeometry(20,30,135,25);
-  label1->setText("Text Color:");
+  label1->setText(klocale->translate("Text Color:"));
 
   qframe1 = new QFrame(this);
   qframe1->setGeometry(155,30,30,25);	
@@ -54,12 +56,12 @@ ConfigDlg::ConfigDlg(QWidget *parent=0, const char *name=0,
 
   button1 = new QPushButton(this);
   button1->setGeometry(205,30,100,25);
-  button1->setText("Change");
+  button1->setText(klocale->translate("Change"));
   connect(button1,SIGNAL(clicked()),this,SLOT(set_fore_color()));
 
   label2 = new QLabel(this);
   label2->setGeometry(20,65,135,25);
-  label2->setText("Background Color:");
+  label2->setText(klocale->translate("Background Color:"));
 
   qframe2 = new QFrame(this);
   qframe2->setGeometry(155,65,30,25);	
@@ -68,17 +70,17 @@ ConfigDlg::ConfigDlg(QWidget *parent=0, const char *name=0,
 
   button2 = new QPushButton(this);
   button2->setGeometry(205,65,100,25);
-  button2->setText("Change");
+  button2->setText(klocale->translate("Change"));
   connect(button2,SIGNAL(clicked()),this,SLOT(set_background_color()));
 
   /*  button3 = new QPushButton(this);
   button3->setGeometry(255,240,70,25);
-  button3->setText("Help");
+  button3->setText(klocale->translate("Help"));
   connect(button3,SIGNAL(clicked()),this,SLOT(help()));
   */
   label5 = new QLabel(this);
   label5->setGeometry(20,105,50,25);
-  label5->setText("Width:");
+  label5->setText(klocale->translate("Width:"));
 
   width = new KIntLineEdit(this);
   width->setGeometry(70,105,60,23);
@@ -88,7 +90,7 @@ ConfigDlg::ConfigDlg(QWidget *parent=0, const char *name=0,
 
   label6 = new QLabel(this);
   label6->setGeometry(20,145,50,25);
-  label6->setText("Height:");
+  label6->setText(klocale->translate("Height:"));
 
   height = new KIntLineEdit(this);
   height->setGeometry(70,145,60,23);
@@ -99,7 +101,7 @@ ConfigDlg::ConfigDlg(QWidget *parent=0, const char *name=0,
   
   label7 = new QLabel(this);
   label7->setGeometry(20,185,100,25);
-  label7->setText("Print Command:");
+  label7->setText(klocale->translate("Print Command:"));
 
   print = new QLineEdit(this);
   print->setGeometry(130,185,180,23);
@@ -107,7 +109,7 @@ ConfigDlg::ConfigDlg(QWidget *parent=0, const char *name=0,
 
   label8 = new QLabel(this);
   label8->setGeometry(20,225,100,25);
-  label8->setText("Mail Command:");
+  label8->setText(klocale->translate("Mail Command:"));
 
   mail = new QLineEdit(this);
   mail->setGeometry(130,225,180,23);
@@ -119,12 +121,12 @@ ConfigDlg::ConfigDlg(QWidget *parent=0, const char *name=0,
   gbox = new QGroupBox(this);
   gbox->setGeometry(150,105,160,65);
 
-  check = new QCheckBox( "3d Frame", gbox );
+  check = new QCheckBox( klocale->translate("3d Frame"), gbox );
   check->setGeometry( 10, 5, 100, 25 );
   check->setChecked( defst->frame3d );
   connect( check, SIGNAL( toggled( bool ) ), SLOT( frame3d_slot( bool ) ) );
 
-  check = new QCheckBox( "Auto Indent", gbox );
+  check = new QCheckBox( klocale->translate("Auto Indent"), gbox );
   check->setGeometry( 10, 35, 100, 25 );
   check->setChecked( defst->autoindent );
   connect( check, SIGNAL( toggled( bool ) ), SLOT( indent_slot( bool ) ) );
